--- a/src/app/features/pages/edit/edit.html
+++ b/src/app/features/pages/edit/edit.html
@@ -1,1 +1,5 @@
-<p>edit works!</p>
+@if (hero) {
+      <app-hero-form [initialHero]="hero" (submitForm)="updateHero($event)" />
+    } @else {
+      <p>Loading...</p>
+    }
