--- a/src/app/features/pages/list/list.html
+++ b/src/app/features/pages/list/list.html
@@ -1,5 +1,8 @@
 <h2>Superhero List</h2>
 
+<button (click)="router.navigate(['/list/new'])">Add New Hero</button>
+
+
 @defer {
   @if (heroes().length > 0) {
     @for (hero of heroes(); track hero.id) {
