--- a/src/app/shared/components/hero-form/hero-form.html
+++ b/src/app/shared/components/hero-form/hero-form.html
@@ -1,17 +1,27 @@
 <form class="hero-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+
   <div class="form-group">
     <label for="name">Name:</label>
     <input id="name" type="text" formControlName="name" />
+    @if (form.get('name')?.touched && form.get('name')?.invalid) {
+      <div class="error">Name is required.</div>
+    }
   </div>
 
   <div class="form-group">
     <label for="power">Power:</label>
     <input id="power" type="text" formControlName="power" />
+    @if (form.get('power')?.touched && form.get('power')?.invalid) {
+      <div class="error">Power is required.</div>
+    }
   </div>
 
   <div class="form-group">
     <label for="imageUrl">Image URL:</label>
     <input id="imageUrl" type="text" formControlName="imageUrl" />
+    @if (form.get('imageUrl')?.touched && form.get('imageUrl')?.errors?.['invalidImageUrl']) {
+      <div class="error">Please enter a valid image URL (.jpg, .jpeg, .png, .gif or .webp).</div>
+    }
   </div>
 
   <div class="preview">
@@ -19,5 +29,5 @@
     <img [src]="previewImage" alt="Hero Image" />
   </div>
 
-  <button class="btn-save" type="submit" [disabled]="form.invalid">💾 Save Hero</button>
+  <button class="btn-save" type="submit" [disabled]="form.invalid"> Save Hero</button>
 </form>
