--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #fdf6f0; /* fondo moderno */
+  background-color: #fdfcfc; /* fondo moderno */
   min-height: 100vh;
   margin: 0;
   font-family: 'Roboto', sans-serif;
