refactor: move search input to reusable SearchBox component with local styles

--- a/src/app/features/pages/list/list.html
+++ b/src/app/features/pages/list/list.html
@@ -5,11 +5,11 @@
     ➕ Add New Hero
   </button>
 
-  <input
-    class="input-search"
-    type="text"
-    placeholder="Search heroes..."
-    (input)="searchTerm.set($any($event.target).value)" />
+  <app-search-box
+  [placeholder]="'Search heroes...'"
+  [value]="searchTerm()"
+  (search)="onSearch($event)" />
+
 </div>
 
 
