--- a/src/app/shared/components/hero-form/hero-form.html
+++ b/src/app/shared/components/hero-form/hero-form.html
@@ -17,7 +17,13 @@
   </div>
 
   <div class="form-group">
-    <label for="imageUrl">Image URL:</label>
+    <label for="imageUrl">Image URL:
+      <span class="tooltip-icon" tabindex="0">ℹ️
+      <span class="tooltip-text">
+        Pegá una URL que termine en .jpg, .png, .gif o webp.<br>
+      </span>
+    </span>
+    </label>
     <input id="imageUrl" type="text" formControlName="imageUrl" />
     @if (form.get('imageUrl')?.touched && form.get('imageUrl')?.errors?.['invalidImageUrl']) {
       <div class="error">Please enter a valid image URL (.jpg, .jpeg, .png, .gif or .webp).</div>
