added improvement to the back button

--- a/src/app/features/pages/new/new.html
+++ b/src/app/features/pages/new/new.html
@@ -1,3 +1,6 @@
+<button appBackButton class="btn-back">
+  <span class="icon">🔙</span>
+  <span class="label">Volver</span>
+</button>
 <app-hero-form (submitForm)="createHero($event)" />
-<button appBackButton class="btn-back">Volver</button>
 
