--- a/src/app/features/pages/edit/edit.html
+++ b/src/app/features/pages/edit/edit.html
@@ -1,6 +1,9 @@
+<button appBackButton class="btn-back">
+  <span class="icon">🔙</span>
+  <span class="label">Volver</span>
+</button>
 @if (hero) {
       <app-hero-form [initialHero]="hero" (submitForm)="updateHero($event)" />
     } @else {
       <p>Loading...</p>
-    }
-<button appBackButton class="btn-back">🔙 Volver</button>
+}
