--- a/src/app/shared/components/search-box/search-box.html
+++ b/src/app/shared/components/search-box/search-box.html
@@ -2,4 +2,5 @@
   type="text"
   [value]="value()"
   (input)="onInput($event)"
-  [placeholder]="placeholder()" />
+  [placeholder]="placeholder()"
+  aria-label="Buscar héroe por nombre" />
