--- a/src/app/features/pages/new/new.html
+++ b/src/app/features/pages/new/new.html
@@ -2,7 +2,7 @@
   <h2>add new hero</h2>
   <button appBackButton class="btn-back" aria-label="Volver a la página anterior">
     <span class="icon">🔙</span>
-    <span class="label">Volver</span>
+    <span class="label">volver</span>
   </button>
   <app-hero-form (submitForm)="createHero($event)" />
 </section>
