--- a/src/app/shared/components/hero-card/hero-card.html
+++ b/src/app/shared/components/hero-card/hero-card.html
@@ -2,7 +2,7 @@
 
   @if (heroImage()) {
     <img
-      ngSrc="{{ heroImage() }}"
+      [ngSrc]="heroImage()"
       width="300"
       height="300"
       [alt]="hero().name"
