--- a/src/app/features/pages/list/list.html
+++ b/src/app/features/pages/list/list.html
@@ -2,16 +2,19 @@
   <h2>{{ 'superhero list' | titlecase }}</h2>
 
   <div class="actions">
-    <button class="btn-primary" aria-label="Add New Hero" (click)="router.navigate(['/list/new'])">
+    <button
+      class="btn-primary"
+      aria-label="Add New Hero"
+      (click)="router.navigate(['/list/new'])">
       ➕ {{ 'Add New Hero' | titlecase }}
     </button>
 
     <app-search-box
-    [placeholder]="'Search heroes...'"
-    [value]="searchTerm()"
-    (search)="onSearch($event)" />
-
+      [placeholder]="'Search heroes...'"
+      [value]="searchTerm()"
+      (search)="onSearch($event)" />
   </div>
+
   <section class="page-size-selector">
     <label for="pageSize" class="visually-hidden">Items per page</label>
 
@@ -28,9 +31,7 @@
     </select>
   </section>
 
-
-
-  @defer {
+  @defer (when isReady()) {
     @if (paginatedHeroes().length > 0) {
       <div class="card-grid">
         @for (hero of paginatedHeroes(); track hero.id) {
@@ -51,16 +52,19 @@
       }
 
       <app-pagination
-      [currentPage]="currentPage()"
-      [totalPages]="totalPages"
-      (prev)="prevPage()"
-      (next)="nextPage()">
+        [currentPage]="currentPage()"
+        [totalPages]="totalPages"
+        (prev)="prevPage()"
+        (next)="nextPage()">
       </app-pagination>
-
     } @else {
       <p>No heroes found.</p>
     }
   } @placeholder {
-  <p>Loading heroes...</p>
-}
+    <app-loading-spinner />
+  } @loading {
+    <app-loading-spinner />
+  } @error {
+    <p class="error-message">⚠️ Something went wrong while loading heroes.</p>
+  }
 </section>
